tests/ui/resolve/transient.stderr
error: expected contract item (function, variable, struct, or modifier definition), found keyword `public`
  --> ROOT/tests/ui/resolve/transient.sol:LL:CC
   |
LL |     public transient tempValue;
   |     ^^^^^^
   |
   = note: for a full list of valid contract items, see <https://docs.soliditylang.org/en/latest/grammar.html#a4.SolidityParser.contractBodyElement>

error: aborting due to 1 previous error

