tests/ui/resolve/transient.sol
contract A {
    public transient tempValue; //~ ERROR: expected contract item (function, variable, struct, or modifier definition), found keyword `public`
}
